--- a/TODO.txt
+++ b/TODO.txt
@@ -1,46 +1,50 @@
-# TODO: Atomized Evaluation Script Calls for All Datasets
+# TODO: Library script calls for LeadingOnes and OneMax (Experiments 5, 6, 7)
 
-# This file lists every individual shell script call that would be made if we were to run
-# evaluate_control_library.sh, evaluate_rounding.sh, and evaluate_tailored_library.sh
-# for every dataset in the Experiments codebase. Each call is written as it would appear
-# in a shell script, with explicit arguments.
+# Conda environment snapshots
+conda run -n analysis python --version > setup_environments/analysis_snapshot.txt
+conda run -n analysis conda list --export >> setup_environments/analysis_snapshot.txt
+conda run -n analysis pip freeze >> setup_environments/analysis_snapshot.txt
 
-# Example noise level (adjust as needed)
-NOISE_LEVEL=1e-12
+conda run -n dso_env python --version > setup_environments/dso_env_snapshot.txt
+conda run -n dso_env conda list --export >> setup_environments/dso_env_snapshot.txt
+conda run -n dso_env pip freeze >> setup_environments/dso_env_snapshot.txt
 
-# =============================
-# OneMax (continuous)
-# =============================
-# Dataset: Experiments/Experiment1/Datasets/OneMax/continuous/GTOneMax.csv
+conda run -n dso_env_rounding python --version > setup_environments/dso_env_rounding_snapshot.txt
+conda run -n dso_env_rounding conda list --export >> setup_environments/dso_env_rounding_snapshot.txt
+conda run -n dso_env_rounding pip freeze >> setup_environments/dso_env_rounding_snapshot.txt
 
-# Control Library (full)
+conda run -n e2e_transformer python --version > setup_environments/e2e_transformer_snapshot.txt
+conda run -n e2e_transformer conda list --export >> setup_environments/e2e_transformer_snapshot.txt
+conda run -n e2e_transformer pip freeze >> setup_environments/e2e_transformer_snapshot.txt
 
-# Tailored Library (minimal)
-bash Scripts/unrounded/algorithm_library/kan_lib.sh Experiments/Experiment1/Datasets/OneMax/continuous/GTOneMax.csv one_max $NOISE_LEVEL
-bash Scripts/unrounded/algorithm_library/tpsr_lib.sh Experiments/Experiment1/Datasets/OneMax/continuous/GTOneMax.csv one_max $NOISE_LEVEL
-bash Scripts/unrounded/algorithm_library/linear_lib.sh Experiments/Experiment1/Datasets/OneMax/continuous/GTOneMax.csv one_max $NOISE_LEVEL
+conda run -n evaluation python --version > setup_environments/evaluation_snapshot.txt
+conda run -n evaluation conda list --export >> setup_environments/evaluation_snapshot.txt
+conda run -n evaluation pip freeze >> setup_environments/evaluation_snapshot.txt
 
-# Rounding (discrete)
+conda run -n generation python --version > setup_environments/generation_snapshot.txt
+conda run -n generation conda list --export >> setup_environments/generation_snapshot.txt
+conda run -n generation pip freeze >> setup_environments/generation_snapshot.txt
 
-# =============================
-# LeadingOnes (continuous)
-# =============================
-# Dataset: Experiments/Experiment1/Datasets/LeadingOnes/continuous/GTLeadingOnes.csv
+conda run -n kan python --version > setup_environments/kan_snapshot.txt
+conda run -n kan conda list --export >> setup_environments/kan_snapshot.txt
+conda run -n kan pip freeze >> setup_environments/kan_snapshot.txt
 
+conda run -n linear python --version > setup_environments/linear_snapshot.txt
+conda run -n linear conda list --export >> setup_environments/linear_snapshot.txt
+conda run -n linear pip freeze >> setup_environments/linear_snapshot.txt
 
-# Tailored Library (minimal)
-bash Scripts/unrounded/algorithm_library/deepsr_lib.sh Experiments/Experiment1/Datasets/LeadingOnes/continuous/GTLeadingOnes.csv leading_ones $NOISE_LEVEL
-bash Scripts/unrounded/algorithm_library/pysr_lib.sh Experiments/Experiment1/Datasets/LeadingOnes/continuous/GTLeadingOnes.csv leading_ones $NOISE_LEVEL
-bash Scripts/unrounded/algorithm_library/kan_lib.sh Experiments/Experiment1/Datasets/LeadingOnes/continuous/GTLeadingOnes.csv leading_ones $NOISE_LEVEL
-bash Scripts/unrounded/algorithm_library/tpsr_lib.sh Experiments/Experiment1/Datasets/LeadingOnes/continuous/GTLeadingOnes.csv leading_ones $NOISE_LEVEL
-bash Scripts/unrounded/algorithm_library/linear_lib.sh Experiments/Experiment1/Datasets/LeadingOnes/continuous/GTLeadingOnes.csv leading_ones $NOISE_LEVEL
+conda run -n psa_cmaes python --version > setup_environments/psa_cmaes_snapshot.txt
+conda run -n psa_cmaes conda list --export >> setup_environments/psa_cmaes_snapshot.txt
+conda run -n psa_cmaes pip freeze >> setup_environments/psa_cmaes_snapshot.txt
 
-# =============================
-# PSA-CMA-ES (continuous)
-# =============================
-# Dataset: Experiments/Experiment1/Datasets/PSACMAES/continuous/GTPSACMAES.csv
+conda run -n pysr_env python --version > setup_environments/pysr_env_snapshot.txt
+conda run -n pysr_env conda list --export >> setup_environments/pysr_env_snapshot.txt
+conda run -n pysr_env pip freeze >> setup_environments/pysr_env_snapshot.txt
 
+conda run -n q_lat python --version > setup_environments/q_lat_snapshot.txt
+conda run -n q_lat conda list --export >> setup_environments/q_lat_snapshot.txt
+conda run -n q_lat pip freeze >> setup_environments/q_lat_snapshot.txt
 
-# =============================
-# (Add more datasets below as needed)
-# ============================= 
+conda run -n tpsr python --version > setup_environments/tpsr_snapshot.txt
+conda run -n tpsr conda list --export >> setup_environments/tpsr_snapshot.txt
+conda run -n tpsr pip freeze >> setup_environments/tpsr_snapshot.txt 
